syntax = "proto3";

package rpc;
option go_package = "peers/rpc";

service PeerService {
    rpc GetKey (GetRequest) returns (GetResponse);
}

message GetRequest {
    string group = 1;
    string key = 2;
}

message GetResponse {
    bytes value = 1;
}